hope this doesnt break everything

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2019\n",
+    "GEN_YEAR = 1974\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -497,8 +497,8 @@
     "            d['OPM'] = -8.57647+0.6111*d['PTSp100']-0.33918*(0.44*d['FTAp100']+d['FGAp100'])+0.440814*d['FTAp100']+0.379745*d['3PAp100']+0.634044*d['ASTp100']+0.77827*d['ORBp100']-1.08855*d['TOVp100']+0.26262*d['STLp100']\n",
     "            d['BPM'] = d['OPM']+d['DPM']\n",
     "\n",
-    "            fouls_drawn = int(stats['pbp'][0][14]) + int(stats['pbp'][0][15])\n",
-    "            fouls_commt = int(stats['pbp'][0][12]) + int(stats['pbp'][0][13])\n",
+    "            #fouls_drawn = int(stats['pbp'][0][14]) + int(stats['pbp'][0][15])\n",
+    "            #fouls_commt = int(stats['pbp'][0][12]) + int(stats['pbp'][0][13])\n",
     "\n",
     "            MP = np.maximum(1,np.nan_to_num(stats['totals'][0][3]))\n",
     "            #if np.isnan(mp_scale):\n",
@@ -507,22 +507,22 @@
     "            #d['PassP'] = ((d['ASTp100']-(0.38*d['Creation']))*0.752+ d['Creation'] + d['TOVp100']) ** 0.67\n",
     "            player_vectors.append([d[stat] for stat in X.columns])\n",
     "            player_heights.append(d['Hgt'])\n",
-    "            d2 = {'CUsage':stats['advanced'][0][14],\n",
-    "                  'CPassing':d['Creation'],\n",
-    "                  'CTurnovers':d['cTOV'],\n",
-    "                  'CRim':d['AtRimFGP'],\n",
-    "                  'CLowPost':d['LowPostFGP'],\n",
-    "                  'CMidRange':d['MidRangeFGP'],\n",
-    "                  'C3Point':np.sqrt(d['3P%']*d['3P%']*d['3PAr']),\n",
-    "                  'CFreeThrow':d['FT%'],\n",
-    "                  'CRebound':d['TRBp100'],\n",
-    "                  'CSteal':d['STLp100'],\n",
-    "                  'CBlock':d['Blkp100'],\n",
-    "                  'CFouling':fouls_commt/MP,\n",
-    "                  'CDrawFoul':fouls_drawn/MP,\n",
-    "                  'CompD':0}\n",
+    "            #d2 = {'CUsage':stats['advanced'][0][14],\n",
+    "            #      'CPassing':d['Creation'],\n",
+    "            #      'CTurnovers':d['cTOV'],\n",
+    "            #      'CRim':d['AtRimFGP'],\n",
+    "            #      'CLowPost':d['LowPostFGP'],\n",
+    "            #      'CMidRange':d['MidRangeFGP'],\n",
+    "            #      'C3Point':np.sqrt(d['3P%']*d['3P%']*d['3PAr']),\n",
+    "            #      'CFreeThrow':d['FT%'],\n",
+    "            #      'CRebound':d['TRBp100'],\n",
+    "            #      'CSteal':d['STLp100'],\n",
+    "            #      'CBlock':d['Blkp100'],\n",
+    "            #      'CFouling':fouls_commt/MP,\n",
+    "            #      'CDrawFoul':fouls_drawn/MP,\n",
+    "            #      'CompD':0}\n",
     "\n",
-    "            player_composites.append([d2[stat] for stat in compNames])\n",
+    "            #player_composites.append([d2[stat] for stat in compNames])\n",
     "        elif ty > 1973:\n",
     "            d = {}\n",
     "            if 'roster' in stats:\n",
@@ -1130,7 +1130,7 @@
     "            br = int(player_stats[py][name]['roster'][0][3].split(',')[-1])\n",
     "        except:\n",
     "            br = py-30\n",
-    "            new_player['born'] = {'year':br,'loc':''}\n",
+    "        new_player['born'] = {'year':br,'loc':''}\n",
     "        if tyear[0]>=CURRENT_YEAR and 'contracts' in player_stats[py][name]:\n",
     "            #print(name,player_stats[py][name]['contracts'])\n",
     "            ctrct = [float(_) for _ in player_stats[py][name]['contracts'][0] if _.replace('\\xa0','0.5') != '0.5']\n",
@@ -1191,15 +1191,6 @@
     "        #print(py,exp_years)\n",
     "    #    pp.pprint(new_player)\n",
     "        #pp.pprint(player_vectors[player_names.index(name)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players"
    ]
   },
   {
