--- a/mega_file.ipynb
+++ b/mega_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "rosters = []\n",
-    "for i in range(1980,2020):\n",
+    "YEAR = 2005\n",
+    "for i in range(YEAR,1967):\n",
     "    rosters.append(json.load(open('rosters/auto_roster_{}.json'.format(i))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1,len(rosters)):\n",
-    "    new_players = [_ for _ in rosters[i]['players'] if 'draft' in _ and _['draft']['year'] == 1980+i]\n",
+    "    new_players = [_ for _ in rosters[i]['players'] if 'draft' in _ and _['draft']['year'] == YEAR+i]\n",
     "    for player in new_players:\n",
     "        player['tid'] = -2\n",
     "    players += new_players"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('mega_1980.json'.format(1980),'wt') as fp:\n",
+    "with open('mega_{}.json'.format(YEAR),'wt') as fp:\n",
     "    json.dump(base,fp, sort_keys=True)"
    ]
   },
