give old rosters names and logos

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1974\n",
+    "GEN_YEAR = 1952\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -244,6 +244,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#for tn in sorted(list(set([_[:3] for _ in os.listdir('teams')]))):\n",
+    "#    print(\"'{}',\".format(tn),end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "player_stats = {k:{} for k in tyear}\n",
     "table_columns = defaultdict(dict)\n",
     "for ty in tyear:\n",
@@ -251,7 +261,7 @@
     "    for team in tables:\n",
     "        team_tables =  tables[team]\n",
     "        for table_name in team_tables:\n",
-    "            if table_name in ['draft-rights','team_and_opponent']:\n",
+    "            if table_name in ['draft-rights','team_and_opponent','conf','name','logo']:\n",
     "                continue\n",
     "            table = team_tables[table_name].fillna(0)\n",
     "            #print(table_name)\n",
@@ -823,7 +833,21 @@
     "            if v == otid:\n",
     "                abbrev_to_tid[k] = tid\n",
     "        valid_teams.append(t)\n",
+    "\n",
+    "if GEN_YEAR < 2010:\n",
+    "    for t in valid_teams:\n",
+    "        for t2 in teams:\n",
+    "            if abbrev_to_tid[t2] == t['tid']:\n",
+    "                print(t['abbrev'],t2,abbrev_to_tid[t2])\n",
+    "                t['abbrev'] = t2\n",
+    "                nsplit = all_tables[GEN_YEAR][t2]['name'].split(' ')\n",
+    "                t['region'] = ' '.join(nsplit[:-1])\n",
+    "                t['name'] = nsplit[-1]\n",
+    "                t['imgURL'] = all_tables[GEN_YEAR][t2]['logo']\n",
+    "print(valid_teams)\n",
     "base['teams'] = valid_teams\n",
+    "\n",
+    "\n",
     "if tyear[0] < CURRENT_YEAR-2:\n",
     "    del base['draftPicks']\n",
     "\n",
@@ -833,6 +857,10 @@
     "if GEN_YEAR < 1970:\n",
     "    for team in base['teams']:\n",
     "        team['did'] = team['cid']\n",
+    "    CONFS = []\n",
+    "    CONFS.append({'did':0, 'cid':0, 'name':'East'})\n",
+    "    CONFS.append({'did':1, 'cid':1, 'name':'West'})\n",
+    "    base['gameAttributes'].append({'key':'divs', 'value': CONFS})\n",
     "#-2 is for undrafted players the ongoing or upcoming draft\n",
     "#-4 is for prospects in next year's draft\n",
     "#-5 is for prospects in the draft after that.\n",
