--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -780,6 +780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "def load_roster(filename):\n",
     "    base = json.load(open(filename,'rb'))\n",
     "\n",
@@ -844,6 +845,27 @@
     "                t['region'] = ' '.join(nsplit[:-1])\n",
     "                t['name'] = nsplit[-1]\n",
     "                t['imgURL'] = all_tables[GEN_YEAR][t2]['logo']\n",
+    "                \n",
+    "cid_count = {0:0,1:0}\n",
+    "for t in valid_teams:\n",
+    "    cid_count[t['cid']]+=1\n",
+    "while abs(cid_count[0]-cid_count[1]) > 1:\n",
+    "    idx = list(range(len(valid_teams)))\n",
+    "    random.shuffle(idx)\n",
+    "    if cid_count[0] > cid_count[1]:\n",
+    "        for i in idx:\n",
+    "            if valid_teams[i]['cid'] == 0:\n",
+    "                valid_teams[i]['cid'] = 1\n",
+    "                break\n",
+    "    else:\n",
+    "        for i in idx:\n",
+    "            if valid_teams[i]['cid'] == 1:\n",
+    "                valid_teams[i]['cid'] = 0\n",
+    "                break\n",
+    "    cid_count = {0:0,1:0}\n",
+    "    for t in valid_teams:\n",
+    "        cid_count[t['cid']]+=1\n",
+    "    \n",
     "print(valid_teams)\n",
     "base['teams'] = valid_teams\n",
     "\n",
