should fix 2018 classes

--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -60,7 +60,7 @@
     "    X[name + 'p36'] = 36* df[name]/den\n",
     "    X[name + 'p100'] = X[name + 'p36']*4/3\n",
     "\n",
-    "if False:\n",
+    "if True:\n",
     "    X['3PtP'] = (2/(1+np.exp(-X['3PAp100']))-1)*X['3P%']/100\n",
     "    X['Creation'] = X['ASTp100']*0.1843+(X['PTSp100']+X['TOVp100'])*0.0969-2.3021*X['3PtP']+0.0582*(X['ASTp100']*(X['PTSp100']+X['TOVp100'])*X['3PtP'] )-1.1942\n",
     "    X['Load'] = (X['ASTp100']-(0.38*X['Creation'])*0.75)+X['FGAp100']+X['FTAp100']*0.44+X['Creation']+X['TOVp100']\n",
@@ -73,7 +73,7 @@
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
     "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
-    "if True:\n",
+    "if False:\n",
     "    X = X[[_ for _ in X.columns if not '3P' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'Rim' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'Post' in _]]\n",
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1952\n",
+    "GEN_YEAR = 2016\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -515,18 +515,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#name,ty,d,stats,(ty,team),locs[(ty,team)],k"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
     "gen_FA = len(teams)*5 if CURRENT_YEAR!=GEN_YEAR else 0\n",
-    "first_n,len(teams),gen_FA\n"
+    "first_n,len(teams),gen_FA\n",
+    "#player_names"
    ]
   },
   {
@@ -1038,7 +1030,8 @@
     "\n",
     "        year_gap = (py-GEN_YEAR) #0,1,2\n",
     "\n",
-    "\n",
+    "        if name == 'Luka Doncic':\n",
+    "            print(py==GEN_YEAR,name in rosters,year_gap,exp_years)\n",
     "        if py == GEN_YEAR and name in rosters:\n",
     "            tid = abbrev_to_tid[rosters[name]]\n",
     "        elif exp_years != 0:\n",
@@ -1047,6 +1040,8 @@
     "            continue\n",
     "        else:\n",
     "            tid = [-2,-4,-5][year_gap-1]\n",
+    "        if name == 'Luka Doncic':\n",
+    "            print(py,name in rosters,year_gap,exp_years)\n",
     "        try:\n",
     "            new_player['tid'] = tid\n",
     "            new_player['pos'] = player_stats[py][name]['roster'][0][0].replace('-','')\n",
@@ -1097,7 +1092,7 @@
     "        new_player['pos'] = \"GF\"\n",
     "        #print(new_player)\n",
     "    else:\n",
-    "        #print(name)\n",
+    "        print(name)\n",
     "        continue\n",
     "    #if name == 'Ben Simmons':\n",
     "    #    print(new_player)\n",
@@ -1141,7 +1136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(ratings),len(ratings_f),len(ratings)+gen_FA"
+    "len(ratings),len(ratings_f),len(ratings)+gen_FA\n",
+    "players"
    ]
   },
   {
