update rosters off by 1

--- a/mega_file.ipynb
+++ b/mega_file.ipynb
@@ -17,10 +17,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rosters = []\n",
     "YEAR = 1967\n",
-    "for i in range(YEAR,2020):\n",
-    "    rosters.append(json.load(open('rosters/auto_roster_{}.json'.format(i))))"
+    "for YEAR in [1952,1967,1968,1977,1980,2005]:\n",
+    "    rosters = []\n",
+    "\n",
+    "    for i in range(YEAR,2020):\n",
+    "        rosters.append(json.load(open('rosters/auto_roster_{}.json'.format(i))))\n",
+    "\n",
+    "    base = rosters[0]\n",
+    "    players = base['players']\n",
+    "    players = [_ for _ in players if _['tid'] >= -1]\n",
+    "\n",
+    "    for i in range(1,len(rosters)):\n",
+    "        new_players = [_ for _ in rosters[i]['players'] if 'draft' in _ and _['draft']['year'] == YEAR+i]\n",
+    "        for player in new_players:\n",
+    "            player['tid'] = -2\n",
+    "        players += new_players\n",
+    "\n",
+    "    base['players'] = players\n",
+    "    base['version'] = 33\n",
+    "\n",
+    "    with open('mega_{}.json'.format(YEAR),'wt') as fp:\n",
+    "        json.dump(base,fp, sort_keys=True)"
    ]
   },
   {
@@ -28,44 +46,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "base = rosters[0]\n",
-    "players = base['players']\n",
-    "players = [_ for _ in players if _['tid'] >= -1]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(1,len(rosters)):\n",
-    "    new_players = [_ for _ in rosters[i]['players'] if 'draft' in _ and _['draft']['year'] == YEAR+i]\n",
-    "    for player in new_players:\n",
-    "        player['tid'] = -2\n",
-    "    players += new_players"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "base['players'] = players\n",
-    "base['version'] = 33"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "with open('mega_{}.json'.format(YEAR),'wt') as fp:\n",
-    "    json.dump(base,fp, sort_keys=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
