--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2016\n",
+    "GEN_YEAR = 2019\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -772,6 +772,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "playersOG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import random\n",
     "def load_roster(filename):\n",
     "    base = json.load(open(filename,'rb'))\n",
@@ -1030,7 +1039,7 @@
     "\n",
     "        year_gap = (py-GEN_YEAR) #0,1,2\n",
     "\n",
-    "        if name == 'Luka Doncic':\n",
+    "        if 'Sprewell' in name:\n",
     "            print(py==GEN_YEAR,name in rosters,year_gap,exp_years)\n",
     "        if py == GEN_YEAR and name in rosters:\n",
     "            tid = abbrev_to_tid[rosters[name]]\n",
@@ -1040,15 +1049,15 @@
     "            continue\n",
     "        else:\n",
     "            tid = [-2,-4,-5][year_gap-1]\n",
-    "        if name == 'Luka Doncic':\n",
-    "            print(py,name in rosters,year_gap,exp_years)\n",
+    "        if 'Sprewell' in name:\n",
+    "            print(py,name in rosters,year_gap,exp_years,py-exp_years-1)\n",
     "        try:\n",
     "            new_player['tid'] = tid\n",
     "            new_player['pos'] = player_stats[py][name]['roster'][0][0].replace('-','')\n",
     "            new_player['weight'] = int(player_stats[py][name]['roster'][0][2])\n",
     "            ht = [int(_) for _ in player_stats[py][name]['roster'][0][1].split('-')]\n",
     "            new_player['hgt'] = ht[0]*12 + ht[1]\n",
-    "            new_player['draft'] = {'year':py-exp_years,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1,}\n",
+    "            new_player['draft'] = {'year':py-exp_years-1,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1,}\n",
     "        except:\n",
     "            print(name)\n",
     "            continue\n",
@@ -1069,6 +1078,8 @@
     "        else:\n",
     "            continue\n",
     "        if py-1 in player_stats and name in player_stats[py-1]:\n",
+    "            year_gap = (py-GEN_YEAR) #0,1,2\n",
+    "\n",
     "            exp_years =  player_stats[py-1][name]['roster'][0][5]\n",
     "            exp_years = int(0 if exp_years == 'R' else exp_years)\n",
     "            new_player['weight'] = int(player_stats[py-1][name]['roster'][0][2])\n",
@@ -1076,7 +1087,7 @@
     "            new_player['pos'] = player_stats[py-1][name]['roster'][0][0].replace('-','')\n",
     "            new_player['hgt'] = ht[0]*12 + ht[1]\n",
     "            new_player['born'] = {'year':int(player_stats[py-1][name]['roster'][0][3].split(',')[-1]),'loc':''}\n",
-    "            new_player['draft'] = {'year':py-exp_years+1,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1}\n",
+    "            new_player['draft'] = {'year':py-exp_years-1,\"round\": 0, \"pick\": 0, \"tid\": -1, \"originalTid\": -1}\n",
     "        else:     \n",
     "            new_player['pos'] = 'GF'\n",
     "            new_player['weight'] = 200\n",
@@ -1097,6 +1108,7 @@
     "    #if name == 'Ben Simmons':\n",
     "    #    print(new_player)\n",
     "    #print(year_gap,py,name)\n",
+    "\n",
     "    try:\n",
     "        scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
     "        sub_rookie = [0,-2,-4,-6][year_gap]\n",
@@ -1113,6 +1125,8 @@
     "    except:\n",
     "        print(name)\n",
     "        pass\n",
+    "    if 'Sprewell' in name:\n",
+    "        print(new_player,players[-1]['lastName'],len(players))\n",
     "    #if name in ['Luka Doncic']: #\"Trevon Duval\",'LeBron James'\n",
     "        #print(py,exp_years)\n",
     "    #    pp.pprint(new_player)\n",
@@ -1138,263 +1152,6 @@
    "source": [
     "len(ratings),len(ratings_f),len(ratings)+gen_FA\n",
     "players"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[(_['name'],_['tid']) for _ in base['teams']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#[p for p in players if 'pos' in p]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#players[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#player_stats[2019]['Kostas Antetokounmpo']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#'Kostas Antetokounmpo' in rosters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dkeys = [_.lower() for _ in ['Hgt', 'Stre', 'Spd', 'Jmp', 'Endu', 'Ins', 'Dnk', 'FT', 'fg', 'tp',\n",
-    "       'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']]\n",
-    "nc = np.array([17,1,11,5,1,1,4,1,1,4,26,10,12,5,1])\n",
-    "nc = np.array([17,2,11,5,2,1,5,2,1,5,22,7,12,6,3])\n",
-    "#nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])\n",
-    "#nc = corr_weights\n",
-    "\n",
-    "nc = np.array([4,8,13,3,1,9,9,2,2,2,16,2,5,16,8])\n",
-    "\n",
-    "nc2 = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
-    "nc3 = np.array([11,3,6,4,1,-4,4,3,-3,5,16,4,6,5,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_df = []\n",
-    "for p in players:\n",
-    "    if not 'name' in p:\n",
-    "        p['name'] = p['firstName'] + ' ' + p['lastName']\n",
-    "    d = {'name':p['name']}\n",
-    "    d.update(p['ratings'][0])\n",
-    "    d['ovr_og'] = sum([d[k]*v for k,v in zip(dkeys,nc2)])/nc2.sum()\n",
-    "    d['ovr_mn'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/nc.sum()\n",
-    "    #d['ovr_mnr'] = sum([d[k]*v for k,v in zip(dkeys,nc)])/np.maximum(0,nc3).sum()\n",
-    "\n",
-    "    player_df.append(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf = pd.DataFrame(player_df).set_index('name')\n",
-    "pdf['diff'] = pdf['ovr_mn'] - pdf['ovr_og']\n",
-    "#pdf['diffr'] = pdf['ovr_mnr'] - pdf['ovr_og']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_og'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['ovr_mn'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pdf.sort_values(['ovr_mnr'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdf.sort_values(['diff'],0,False)\n",
-    "#_ = plt.hist(pdf['diff'],40,density='True',label='NBA player OVR shift')\n",
-    "#plt.xlim(-10,10);plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use('seaborn-white')\n",
-    "plt.figure(figsize=(6,6))\n",
-    "plt.plot([30,80],[30,80],'--',c='k',lw=3)\n",
-    "plt.scatter(pdf.ovr_og,pdf.ovr_mn,s=6)\n",
-    "plt.xlabel('original')\n",
-    "plt.ylabel('new')\n",
-    "plt.xlim(30,80)\n",
-    "plt.ylim(30,80)\n",
-    "plt.grid(True)\n",
-    "#pdf.sort_values(['diffr'],0,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if True:\n",
-    "    plt.figure(figsize=(6,6))\n",
-    "    plt.plot([30,80],[30,80],'--',c='k',lw=3)\n",
-    "    plt.scatter((y @ nc2)/nc2.sum(),(y @ nc)/nc.sum(),s=1,alpha=0.6)\n",
-    "    plt.xlabel('original')\n",
-    "    plt.ylabel('new')\n",
-    "    plt.xlim(30,80)\n",
-    "    plt.ylim(30,80)\n",
-    "    plt.grid(True)\n",
-    "    #pdf.sort_values(['diffr'],0,False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(player_composites),len(player_names),len(ratings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fexp3 = preprocessing.PolynomialFeatures(degree=2,interaction_only=True)\n",
-    "scalerX3 = preprocessing.RobustScaler()\n",
-    "scalery3 = preprocessing.StandardScaler()\n",
-    "prescale_X3 = scalerX3.fit_transform(ratings)\n",
-    "prescale_y3 = scalery3.fit_transform(player_composites)\n",
-    "#prescale_X3 = fexp3.fit_transform(prescale_X3)\n",
-    "\n",
-    "clf3= multioutput.MultiOutputRegressor(linear_model.ElasticNet(positive=False,alpha=3e-3,l1_ratio=.8,fit_intercept=False))\n",
-    "clf3.fit(prescale_X3,prescale_y3)\n",
-    "yt3 = scalery3.inverse_transform(clf3.predict(prescale_X3))\n",
-    "err3 = np.linalg.norm(yt3-player_composites)\n",
-    "err3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dkeys \n",
-    "for i,c in enumerate(compNames):\n",
-    "    coeffs = clf3.estimators_[i].coef_ \n",
-    "    v = np.argsort(abs(coeffs))[::-1]\n",
-    "    #print('\\n',c)\n",
-    "    coeffs2 = [(coeffs[i2]/coeffs.max(),dkeys[i2]) for i2 in v[:90]]\n",
-    "    print('\\n| {} |  |'.format(c[1:]))\n",
-    "    print('|----------|-------|')\n",
-    "    for v,n in sorted(coeffs2,reverse=True):\n",
-    "        if abs(v) < 0.1:\n",
-    "            continue\n",
-    "        print('|{:10s}|{:.1f}|'.format(n,10*v))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings = 'ratings'\n",
-    "weights = 'weights'\n",
-    "t= {\n",
-    "        ratings: [\"hgt\", \"spd\", \"drb\", \"dnk\", \"oiq\"],\n",
-    "        weights: [1, 1, 1, 1, 1],\n",
-    "}\n",
-    "t2= {\n",
-    "        ratings: ['dnk','drb','ins','oiq','ft'],\n",
-    "        weights: [6,4,3,2,-3],\n",
-    "}\n",
-    "rmax = 6/max(t['weights'])\n",
-    "rmax2 = 6/max(t2['weights'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('| Feature | Proposed | Current |'.format(c[1:]))\n",
-    "print('|---------|----------|---------|')\n",
-    "for w,r in sorted([(w,r) for r,w in zip(t2['ratings'],t2['weights'])],reverse=True):\n",
-    "    current = ' '\n",
-    "    if r in t['ratings']:\n",
-    "        current = '{:.1f}'.format(t['weights'][t['ratings'].index(r)]*rmax)\n",
-    "    print('|{:12s}|{:.1f}| {} |'.format(r,w*rmax2,current))\n",
-    "for w,r in sorted([(w,r) for r,w in zip(t['ratings'],t['weights'])],reverse=True):\n",
-    "    current = ''\n",
-    "    if r in t2['ratings']:\n",
-    "        continue\n",
-    "    print('|{:12s}|{}| {:.1f} |'.format(r,' ',w*rmax))"
    ]
   },
   {
