off by one mega fixed

--- a/mega_file.ipynb
+++ b/mega_file.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "    base = rosters[0]\n",
     "    players = base['players']\n",
-    "    players = [_ for _ in players if _['tid'] >= -1]\n",
+    "    players = [_ for _ in players if _['tid'] >= -2]\n",
     "\n",
     "    for i in range(1,len(rosters)):\n",
     "        new_players = [_ for _ in rosters[i]['players'] if 'draft' in _ and _['draft']['year'] == YEAR+i]\n",
@@ -46,7 +46,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "players"
+   ]
   },
   {
    "cell_type": "code",
