fixed some errors

--- a/mega_file.ipynb
+++ b/mega_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "YEAR = 1967\n",
-    "for YEAR in [1952,1967,1968,1977,1980,2005]:\n",
+    "for YEAR in [1952,1967,1968,1969,1977,1980,1984,1992,2005,2012]:\n",
     "    rosters = []\n",
     "\n",
     "    for i in range(YEAR,2020):\n",
@@ -55,7 +55,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mega_1952.json  mega_1969.json  mega_1984.json  mega_2012.json\n",
+    "mega_1967.json  mega_1977.json  mega_1992.json  mega_file.ipynb\n",
+    "mega_1968.json  mega_1980.json  mega_2005.json"
+   ]
   },
   {
    "cell_type": "code",
