force them to be non-FA

--- a/era.ipynb
+++ b/era.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "rosters = []\n",
-    "START_YEAR = 1960\n",
+    "START_YEAR = 2010\n",
     "for YEAR in range(START_YEAR,2020):\n",
     "    rosters.append(json.load(open('rosters/auto_roster_{}.json'.format(YEAR))))\n"
    ]
@@ -175,7 +175,8 @@
     "    for player in roster['players']:\n",
     "        name = player['firstName'] + ' ' + player['lastName']\n",
     "        ovr = sum(player['ratings'][0][k]*nc2[y_keys.index(km)] for k,km in y_map.items())\n",
-    "        player_years[name].append((ovr,i+START_YEAR,[_ for _ in roster['teams'] if _['tid'] == player['tid']],player))"
+    "        if player['tid'] != -1:\n",
+    "            player_years[name].append((ovr,i+START_YEAR,[_ for _ in roster['teams'] if _['tid'] == player['tid']],player))"
    ]
   },
   {
@@ -194,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_years['LeBron James']"
+    "player_years['Chris Paul']"
    ]
   },
   {
@@ -209,7 +210,7 @@
     "    try:\n",
     "        optimal_teams[abbrev_to_tid[player_years[name][2][0]['abbrev']]].append((player[0],name))\n",
     "    except IndexError:\n",
-    "        pass\n",
+    "        pass#print(name)\n",
     "    except:\n",
     "        raise"
    ]
@@ -233,15 +234,16 @@
     "players = []\n",
     "for team in optimal_teams:\n",
     "    for p in optimal_teams[team][:12]:\n",
-    "        po, py, pt, pr = player = player_years[name]\n",
+    "        po, py, pt, pr = player = player_years[p[1]]\n",
     "        pr['tid'] = team\n",
     "        pr['born']['year'] = CURRENT_YEAR - (py-pr['born']['year'])\n",
     "        players.append(pr)\n",
     "    for p in optimal_teams[team][12:]:\n",
-    "        po, py, pt, pr = player = player_years[name]\n",
+    "        po, py, pt, pr = player = player_years[p[1]]\n",
     "        pr['tid'] = -1\n",
     "        pr['born']['year'] = CURRENT_YEAR - (py-pr['born']['year'])\n",
-    "        players.append(pr)"
+    "        if po > 50:\n",
+    "            players.append(pr)"
    ]
   },
   {
@@ -251,8 +253,9 @@
    "outputs": [],
    "source": [
     "base['players'] = players\n",
-    "with open('era_{}.json'.format(CURRENT_YEAR),'wt') as fp:\n",
-    "    json.dump(base,fp, sort_keys=True)"
+    "with open('era_{}.json'.format(START_YEAR),'wt') as fp:\n",
+    "    json.dump(base,fp, sort_keys=True)\n",
+    "len(players)"
    ]
   },
   {
@@ -271,7 +274,25 @@
    "outputs": [],
    "source": [
     "player_years['LeBron James']\n",
-    "base['gameAttributes']"
+    "base['gameAttributes']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_years.keys()"
    ]
   },
   {
