--- a/era.ipynb
+++ b/era.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "rosters = []\n",
-    "START_YEAR = 2010\n",
+    "START_YEAR = 1960\n",
     "for YEAR in range(START_YEAR,2020):\n",
     "    rosters.append(json.load(open('rosters/auto_roster_{}.json'.format(YEAR))))\n"
    ]
@@ -60,88 +60,78 @@
    "outputs": [],
    "source": [
     "new_team = [\n",
-    "        ('CHO','CHA'),\n",
-    "        ('NOP','NOH'),\n",
-    "        ('BRK','NJN'),\n",
-    "        ('OKC','SEA'),\n",
-    "        ('NOK','NOH'),\n",
-    "        ('NOH','CHH'),\n",
-    "        ('MEM','VAN'),\n",
-    "        ('WAS','WSB'),\n",
-    "        ('SAC','KCK'),\n",
-    "        ('LAC','SDC'),\n",
-    "        ('UTA','NOJ'),\n",
-    "        ('SDC','BUF'),\n",
-    "        ('NJN','NYN'),\n",
-    "        ('GSW','SFW'),\n",
-    "        ('SAS','DLC'),\n",
-    "        ('DLC','TEX'),\n",
-    "        ('HOU','SDR'),\n",
-    "        ('CHA','CHH'),\n",
-    "        ('SAA','TEX'),\n",
-    "        ('SAS','SAA'),\n",
-    "        ('DEN','DNA'),\n",
-    "        ('DNA','DNR'),\n",
-    "        ('WSB','CAP'),\n",
-    "        ('CAP','BAL'),\n",
-    "        ('BAL','CHZ'),\n",
-    "        ('CHZ','CHP'),\n",
-    "        ('SEA','SDS'),\n",
-    "        ('SDS','SDA'),\n",
-    "        ('MIA','FLO'),\n",
-    "        ('FLO','MMF'),\n",
-    "        ('MMF','MNM'),\n",
-    "        ('SFW','PHW'),\n",
-    "        ('LAL','MNL'),\n",
-    "        ('UTA','UTS'),\n",
-    "        ('UTS','LAS'),\n",
-    "        ('LAS','ANA'),\n",
-    "        ('CHH','SSL'),\n",
-    "        ('SSL','CAR'),\n",
-    "        ('CAR','HSM'),\n",
-    "        ('DET','FTW'),\n",
-    "        ('MLH','TRI'),\n",
-    "        ('ATL','STL'),\n",
-    "        ('STL','MLH'),\n",
-    "        ('MLH','TRI'),\n",
-    "        ('PHI','SYR'),\n",
-    "        ('CIN','ROC'),\n",
-    "        ('TOR','PTC'),\n",
-    "        ('PTC','PTP'),\n",
-    "        ('MNP','PTP'),\n",
-    "        ('PTP','MNP'),\n",
-    "        ('VAN','MMS'),\n",
-    "        ('MMS','MMT'),\n",
-    "        ('MMT','MMP'),\n",
-    "        ('MMP','NOB'),\n",
-    "        ('ORL','VIR'),\n",
-    "        ('VIR','WSA'),\n",
-    "        ('WSA','OAK'),\n",
-    "        ('SAC','KCK'),\n",
-    "        ('KCK','KCO'),\n",
-    "        ('KCO','KCK'),\n",
-    "        ('KCK','CIN'),\n",
-    "        ('CIN','ROC'),]\n",
+    "            ('PHX','PHO'),\n",
+    "            ('BKN','BRK'),\n",
+    "            ('CHA','CHO'),\n",
+    "            ('NOP','NOH'),\n",
+    "            ('NOH','NOK'),\n",
+    "            ('BRK','NJN'),\n",
+    "            ('OKC','SEA'),\n",
+    "            ('MEM','VAN'),\n",
+    "            ('WAS','WSB'),\n",
+    "            ('SAC','KCK'),\n",
+    "            ('LAC','SDC'),\n",
+    "            ('UTA','NOJ'),\n",
+    "            ('SDC','BUF'),\n",
+    "            ('NJN','NYN'),\n",
+    "            ('NYN','NYA'),\n",
+    "            ('NYA','NJA'),\n",
+    "            ('GSW','SFW'),\n",
+    "            ('SAS','DLC'),\n",
+    "            ('DLC','TEX'),\n",
+    "            ('HOU','SDR'),\n",
+    "            ('CHA','CHH'),\n",
+    "            ('SAS','SAA'),\n",
+    "            ('SAA','TEX'),\n",
+    "            ('DEN','DNA'),\n",
+    "            ('DNA','DNR'),\n",
+    "            ('WSB','CAP'),\n",
+    "            ('CAP','BAL'),\n",
+    "            ('BAL','CHZ'),\n",
+    "            ('CHZ','CHP'),\n",
+    "            ('NOH','KEN'),\n",
+    "            ('MIN','SDS'),\n",
+    "            ('SDS','SDA'),\n",
+    "            ('MIA','FLO'),\n",
+    "            ('FLO','MMF'),\n",
+    "            ('MMF','MNM'),\n",
+    "            ('SFW','PHW'),\n",
+    "            ('LAL','MNL'),\n",
+    "            ('UTA','UTS'),\n",
+    "            ('UTS','LAS'),\n",
+    "            ('LAS','ANA'),\n",
+    "            ('CHH','SSL'),\n",
+    "            ('SSL','CAR'),\n",
+    "            ('CAR','HSM'),\n",
+    "            ('DET','FTW'),\n",
+    "            ('ATL','STL'),\n",
+    "            ('STL','MLH'),\n",
+    "            ('MLH','TRI'),\n",
+    "            ('PHI','SYR'),\n",
+    "            ('TOR','PTC'),\n",
+    "            ('PTC','PTP'),\n",
+    "            ('PTP','MNP'),\n",
+    "            ('VAN','MMS'),\n",
+    "            ('MMS','MMT'),\n",
+    "            ('MMT','MMP'),\n",
+    "            ('MMP','NOB'),\n",
+    "            ('ORL','VIR'),\n",
+    "            ('VIR','WSA'),\n",
+    "            ('WSA','OAK'),\n",
+    "            ('SAC','KCK'),\n",
+    "            ('KCK','KCO'),\n",
+    "            ('KCO','KCK'),\n",
+    "            ('KCK','CIN'),\n",
+    "            ('CIN','ROC'),\n",
+    "            ('CHP','BLB'),\n",
+    "            ('IND','INA'),\n",
+    "            ('INA','INO')]\n",
     "st = set()\n",
     "for t in new_team:\n",
     "    st.add(t[0])\n",
     "    st.add(t[1])\n",
     "abbrev_to_tid = {_['abbrev']:_['tid'] for _ in base['teams']}\n",
-    "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
-    "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
-    "abbrev_to_tid['BRK'] = abbrev_to_tid['BKN']\n",
-    "abbrev_to_tid['NOH'] = abbrev_to_tid['NOP']\n",
-    "abbrev_to_tid['NJN'] = abbrev_to_tid['BKN']\n",
-    "abbrev_to_tid['SEA'] = abbrev_to_tid['OKC']\n",
-    "abbrev_to_tid['KCK'] = abbrev_to_tid['SAC']\n",
-    "abbrev_to_tid['SDC'] = abbrev_to_tid['LAC']\n",
-    "abbrev_to_tid['WSB'] = abbrev_to_tid['WAS']\n",
-    "abbrev_to_tid['CHH'] = abbrev_to_tid['CHA']\n",
-    "abbrev_to_tid['VAN'] = abbrev_to_tid['MEM']\n",
-    "abbrev_to_tid['NOK'] = abbrev_to_tid['NOP']\n",
-    "abbrev_to_tid['NOK'] = abbrev_to_tid['NOP']\n",
-    "abbrev_to_tid['BUF'] = abbrev_to_tid['LAC']\n",
-    "abbrev_to_tid['CAP'] = abbrev_to_tid['WAS']\n",
+    "\n",
     "for nt,ot in new_team:\n",
     "    try:\n",
     "        abbrev_to_tid[ot] = abbrev_to_tid[nt]\n",
