i hope i didnt break anything

--- a/mega_file.ipynb
+++ b/mega_file.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "YEAR = 1967\n",
-    "for YEAR in [1952,1960,1967,1968,1969,1977,1980,1984,1992,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2012]:\n",
+    "YEARS = [1952, 1960, 1967, 1968, 1969, 1977, 1980, 1981, 1984, 1989, 1990, 1992, 1995, 1996, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2012]\n",
+    "for YEAR in YEARS:\n",
     "    rosters = []\n",
     "\n",
     "    for i in range(YEAR,2020):\n",
@@ -32,6 +33,8 @@
     "        new_players = [_ for _ in rosters[i]['players'] if 'draft' in _ and _['draft']['year'] == YEAR+i]\n",
     "        for player in new_players:\n",
     "            player['tid'] = -2\n",
+    "            if player['firstName'] == 'LeBron':\n",
+    "                print(i,player['draft']['year'])\n",
     "        players += new_players\n",
     "\n",
     "    base['players'] = players\n",
@@ -56,9 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mega_1952.json  mega_1969.json  mega_1984.json  mega_2012.json\n",
-    "mega_1967.json  mega_1977.json  mega_1992.json  mega_file.ipynb\n",
-    "mega_1968.json  mega_1980.json  mega_2005.json"
+    "t = 'mega_1952.json  mega_1980.json  mega_1995.json  mega_2002.json  mega_2008.json \\\n",
+    "mega_1960.json  mega_1981.json  mega_1996.json  mega_2003.json  mega_2012.json \\\n",
+    "mega_1967.json  mega_1984.json  mega_1998.json  mega_2004.json \\\n",
+    "mega_1968.json  mega_1989.json  mega_1999.json  mega_2005.json \\\n",
+    "mega_1969.json  mega_1990.json  mega_2000.json  mega_2006.json \\\n",
+    "mega_1977.json  mega_1992.json  mega_2001.json  mega_2007.json'\n",
+    "print(sorted([int(_[5:9]) for _ in t.split()]))"
    ]
   },
   {
@@ -66,14 +73,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for p in players:\n",
+    "    if p['firstName'] == 'Zion':\n",
+    "        #print(p)\n",
+    "        print(p['draft']['year'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(players)"
+   ]
   },
   {
    "cell_type": "code",
