--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1996\n",
+    "GEN_YEAR = 2019\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -1144,10 +1144,8 @@
     "        print(name)\n",
     "        continue#print('aasdsd')\n",
     "        #raise\n",
-    "    #if name == 'Ben Simmons':\n",
-    "    #    print(new_player)\n",
-    "    #print(year_gap,py,name)\n",
     "\n",
+    "    \n",
     "    try:\n",
     "        scale_rookie = [1.0,1.0,1.0,1.0][year_gap]\n",
     "        sub_rookie = [0,0,0,0][year_gap]\n",
@@ -1170,7 +1168,7 @@
     "    #if name in ['Luka Doncic']: #\"Trevon Duval\",'LeBron James'\n",
     "        #print(py,exp_years)\n",
     "    #    pp.pprint(new_player)\n",
-    "        #pp.pprint(player_vectors[player_names.index(name)])"
+    "        #pp.pprint(player_vectors[player_names.index(name)])\n"
    ]
   },
   {
@@ -1178,7 +1176,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "players"
+   ]
   },
   {
    "cell_type": "code",
