--- a/merge_roster.ipynb
+++ b/merge_roster.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "from unidecode import unidecode"
    ]
   },
   {
@@ -16,7 +17,7 @@
    "outputs": [],
    "source": [
     "base_roster = '2019-20.NBA.Roster.json'\n",
-    "settings_roster = 'auto_roster_2019.json'\n"
+    "settings_roster = 'rosters/auto_roster_2019.json'\n"
    ]
   },
   {
@@ -41,10 +42,10 @@
     "new_settings = {}\n",
     "for p in settings['players']:\n",
     "    name = p['firstName'] + ' ' + p['lastName']\n",
-    "    nsplit = name.split(' ')\n",
+    "    nsplit = unidecode(name).split(' ')\n",
     "    if nsplit[-1] in ['Jr','Sr','III','II','Jr.','Sr.']:\n",
     "        name = ' '.join(nsplit[:-1])\n",
-    "    p['name'] =name.replace('.','')\n",
+    "    p['name'] = unidecode(name).replace('.','')\n",
     "    if p['name'] in new_settings:\n",
     "        print(new_settings[p['name']])\n",
     "        print(p)\n",
@@ -59,10 +60,11 @@
    "outputs": [],
    "source": [
     "for p in base['players']:\n",
+    "    \n",
     "    if not 'name' in p:\n",
     "        p['name'] = p['firstName'] + ' ' + p['lastName']\n",
     "    #del p['pos']\n",
-    "    name = p['name'].rstrip().strip().replace('.','')\n",
+    "    name = unidecode(p['name']).rstrip().strip().replace('.','')\n",
     "    nsplit = name.split(' ')\n",
     "    if nsplit[-1] in ['Jr','Sr','III','II','Jr.','Sr.']:\n",
     "        name = ' '.join(nsplit[:-1])\n",
@@ -87,7 +89,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_settings.keys()"
+   ]
   },
   {
    "cell_type": "code",
