DRE in modern files

--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -26,7 +26,33 @@
    "source": [
     "df = pd.read_csv('avg_stats.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
     "df = df[(df.G*df.MP > 48)]\n",
-    "df.shape"
+    "df.shape\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dkeys = ['Hgt', 'Str', 'Spd', 'Jmp', 'End', 'Ins', 'Dnk', 'FT', '2Pt', '3Pt',\n",
+    "       'oIQ', 'dIQ', 'Drb', 'Pss', 'Reb']\n",
+    "new_ovr = []\n",
+    "for row in df.iterrows():\n",
+    "    new_ovr.append(sum([row[1][k]*v for k,v in zip(dkeys,nc)])/nc.sum())\n",
+    "\n",
+    "nc = np.array([7,1,6,1,1,1,2,1,1,1,9,3,6,2,1])\n",
+    "plt.hist(new_ovr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row[1]['Ovr']"
    ]
   },
   {
@@ -36,12 +62,12 @@
    "outputs": [],
    "source": [
     "y = df.iloc[:,-18:-17] #45\n",
-    "y = df.iloc[:,45:46] #45\n",
+    "y.iloc[:,0] += (df.iloc[:,45]-0.074737)*50 #45\n",
+    "y /=2 \n",
     "\n",
     "X = df.iloc[:,-15:] # -17:-16\n",
     "X = X[[_ for _ in X.columns if _ != '+/-' ]]\n",
-    "X.columns,y.columns\n",
-    "#df.columns[4"
+    "X.columns,y.columns,y.shape"
    ]
   },
   {
@@ -88,13 +114,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trials = 1\n",
+    "## trials = 1\n",
     "ts = []\n",
     "for i in range(trials):\n",
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
-    "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
+    "    #clf = neural_network.MLPRegressor((32,4),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3,fit_intercept=False))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,fit_intercept=False))\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
     "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
     "    clf.fit(prescale_X,prescale_y)\n",
@@ -133,9 +159,18 @@
     "    print('| Var      | Coeff |')\n",
     "    print('|----------|-------|')\n",
     "    for v,n in sorted(coeffs2,reverse=True):\n",
-    "        print('|{:10s}|{:.2f}|'.format(n,v/coeffs.max()))\n",
+    "        print('|{:10s}|{:.2f}|'.format(n,100*v/coeffs.sum()))\n",
     "    #for v,n in sorted(coeffs2,reverse=True):\n",
     "    #    print('\\t{:25s}\\t{:.2f}'.format(n,v))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Ovr'].mean(),df['Ovr'].std()"
    ]
   },
   {
