--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -73,10 +73,18 @@
     "    X['OPM'] = -8.57647+0.6111*X['PTSp100']-0.33918*(0.44*X['FTAp100']+X['FGAp100'])+0.440814*X['FTAp100']+0.379745*X['3PAp100']+0.634044*X['ASTp100']+0.77827*X['ORBp100']-1.08855*X['TOVp100']+0.26262*X['STLp100']\n",
     "    X['BPM'] = X['OPM'] + X['DPM']\n",
     "    X['Age'] = df['Age']\n",
-    "\n",
+    "    X['DRE'] = -8.4+ 0.8*X['PTSp100'] -0.7*(X['FGAp100']-X['3PAp100']) -0.6*X['3PAp100'] - 0.2*X['FTp100'] + 0.1*X['ORBp100'] + 0.4*X['DRBp100'] + 0.5*X['ASTp100'] + 1.7*X['STLp100'] + 0.8*X['Blkp100'] - 1.4*X['TOVp100'] - 0.1*X['PFp100']\n",
+    "    for name in [_ for _ in X.columns if 'FG' in _]:\n",
+    "        name3 = name.replace('FG','3P')\n",
+    "        if '%' in name or name3 not in list(X.columns):\n",
+    "            continue\n",
+    "        nname = name.replace('FG','2P')\n",
+    "        X[nname] = X[name] - X[name3]\n",
+    "        print(name)\n",
+    "        \n",
     "#X['PassP'] = ((X['ASTp100']-(0.38*X['Creation']))*0.752+ X['Creation'] + X['TOVp100']) ** 0.67\n",
     "#'OPM','DPM','cTOV','Load'#stat_list[:-2]+\n",
-    "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['FT%','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
+    "X = X[[_ for _ in X.columns if '%A' in _ or _[-1]=='r' or \"+/-\" in _ or 'p36' in _ or _ in (['DRE','FT%','OPM','BPM','DPM','Creation','cTOV','Load','Age','MP'])]]\n",
     "if False:\n",
     "    X = X[[_ for _ in X.columns if not '3P' in _]]\n",
     "    X = X[[_ for _ in X.columns if not 'Rim' in _]]\n",
@@ -115,7 +123,7 @@
    "outputs": [],
    "source": [
     "np.round(replacement_player_std_r).astype(np.int)\n",
-    "#_ =  plt.hist(X['OWSp36'],150)"
+    "_ =  plt.hist(X['DRE'],150)"
    ]
   },
   {
@@ -431,7 +439,7 @@
     "lt = [('FG%','totals'),('MP','per_game'),('Ht','roster'),('Birth Date','roster'),\n",
     "            ('FG','per_game'),('FGA','per_game'),('3P','per_game'),('3PA','per_game'),('3P%','totals'),\n",
     "            ('FT','per_game'),('ORB','per_game'),('TRB','per_game'),('FT%','totals'),\n",
-    "            ('FTA','per_game'),('DRB','per_game'),('AST','per_game'),\n",
+    "            ('FTA','per_game'),('DRB','per_game'),('AST','per_game'),('2P','per_game'),('2PA','per_game'),\n",
     "            ('STL','per_game'),('TOV','per_game'),('Blk','per_game','BLK'),\n",
     "            ('PF','per_game'),('PTS','per_game','PTS/G'),('PER','advanced'),('PTS','per_game','PTS'),\n",
     "            ('OPM','advanced','OBPM'),('BPM','advanced'),('USG%','advanced'),('DPM','advanced','DBPM'),\n",
@@ -512,6 +520,7 @@
     "                d['Age']=np.random.randint(25,35)\n",
     "\n",
     "            if '3PAp100' in d:\n",
+    "                d['DRE'] = -8.4+ 0.8*d['PTSp100'] -0.7*(d['FGAp100']-d['3PAp100']) -0.6*d['3PAp100'] - 0.2*d['FTp100'] + 0.1*d['ORBp100'] + 0.4*d['DRBp100'] + 0.5*d['ASTp100'] + 1.7*d['STLp100'] + 0.8*d['Blkp100'] - 1.4*d['TOVp100'] - 0.1*d['PFp100']\n",
     "                d['3PtP'] = (2/(1+np.exp(-d['3PAp100']))-1)*d['3P%']\n",
     "                d['Creation'] = d['ASTp100']*0.1843+(d['PTSp100']+d['TOVp100'])*0.0969-2.3021*d['3PtP']+0.0582*(d['ASTp100']*(d['PTSp100']+d['TOVp100'])*d['3PtP'] )-1.1942\n",
     "                d['Load'] = (d['ASTp100']-(0.38*d['Creation'])*0.75)+d['FGAp100']+d['FTAp100']*0.44+d['Creation']+d['TOVp100']\n",
@@ -526,8 +535,10 @@
     "            player_scales.append(MP)\n",
     "            player_vectors.append([d[stat] for stat in X.columns])\n",
     "            player_heights.append(d['Hgt'])\n",
-    "        except:\n",
+    "        except Exception as e:\n",
     "            print(name,team)\n",
+    "            print(e)\n",
+    "            print(d.keys())\n",
     "            pass\n",
     "X.columns"
    ]
